[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/btnPlay.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Font/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Font/Roboto-Thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/hOwBtn.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 21
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 38.0
margin_top = 21.0
margin_right = 218.0
margin_bottom = 123.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 26.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 30.0
margin_right = 150.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HScore" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.2, 0.2, 1 )
text = "High Score: "

[node name="HScoreVal" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 120.0
margin_top = 1.0
margin_right = 120.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.14902, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 180.0
margin_bottom = 102.0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer2"]
margin_left = 40.0
margin_right = 140.0
margin_bottom = 34.0
texture_normal = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 180.0
margin_bottom = 72.0
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/CenterContainer2/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
